syntax = "proto3";

import "google/api/annotations.proto";

package catalogs;

service CatalogManager {
    rpc ListCatalogs (ListCatalogsRequest) returns (ListCatalogsResponse) {
        option (google.api.http) = {
          get: "/v1/projects/{project_id}/catalogs"
        };
    }
    rpc RetrieveCatalog (RetrieveCatalogRequest) returns (Catalog) {
        option (google.api.http) = {
          get: "/v1/projects/{project_id}/catalogs/{catalog_id}"
        };
    }
    rpc RetrieveCatalogOptions (RetrieveCatalogOptionsRequest) returns (CatalogOptions) {
        option (google.api.http) = {
          get: "/v1/projects/{project_id}/catalogs/{catalog_id}/options"
        };
    }
    rpc CreateCatalog (CreateCatalogRequest) returns (CatalogOptions) {
        option (google.api.http) = {
          put: "/v1/projects/{project_id}/catalogs/{catalog_id}"
          body: "*"
        };
    }
}

message ListCatalogsRequest {
    string project_id = 1;
}

message ListCatalogsResponse {
    string project_id = 1;
    repeated Catalog catalogs = 2;
}

message RetrieveCatalogRequest {
    string project_id = 1;
    string catalog_id = 2;
}

message Catalog {
    string project_id = 1;
    string catalog_id = 2;
    string token = 3;
    string created = 4;
}

message RetrieveCatalogOptionsRequest {
    string project_id = 4;
    string catalog_id = 1;
    repeated string selections = 2;
    repeated string exclusions = 3;

    string token = 5;
}

message CreateCatalogRequest {
    string project_id = 5;
    string catalog_id = 1;
    repeated Family families = 2;
    repeated Exclusion exclusions = 3;
    repeated Inclusion inclusions = 4;
}

message Family {
    string family_id = 1;
    repeated string items = 2;
}

message Exclusion {
    string selected_item = 1;
    repeated string exclusions = 2;
}

message Inclusion {
    string selected_item = 1;
    repeated string inclusions = 2;
}

message CatalogOptions {
    string catalog_id = 1;
    repeated FamilyOptions options = 2;

    string token = 3;
}

message FamilyOptions {
    string family_id = 1;
    repeated ItemOption options = 2;
}

message ItemOption {
    enum Status {
        UNUSED = 0;
        AVAILABLE = 1;
        SELECTED = 2;
        EXCLUDED = 3;
        REQUIRED = 4;
    }

    string item_id = 1;
    Status item_status = 2;
}
